--- a/authuser/pom.xml
+++ b/authuser/pom.xml
@@ -64,13 +64,19 @@
 			<optional>true</optional>
 		</dependency>
 
-<!-- Permite que outros clientes que forem utilizar esta API possam utilizar filtros em suas pesquisas de dados(ex: trazer usuários apenas com status "ativo") -->
+		<!-- Permite que outros clientes que forem utilizar esta API possam
+		utilizar filtros em suas pesquisas de dados(ex: trazer usuários apenas
+		com status "ativo") -->
 		<dependency>
 			<groupId>net.kaczmarzyk</groupId>
 			<artifactId>specification-arg-resolver</artifactId>
 			<version>2.18.1</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
 
 	</dependencies>
 
